fix: table of contents default collapsed bug

--- a/app/assets/stylesheets/components.css
+++ b/app/assets/stylesheets/components.css
@@ -115,7 +115,7 @@
     @apply absolute right-0 top-24 h-[calc(100%-100px)] z-10 w-[calc((100%-750px)/2)] bg-white;
 
     &.floating {
-        @apply shadow-elevation-lg w-40 pl-3;
+        @apply shadow-elevation-lg w-48 pl-3;
     }
 
     #toc {
